Ingress-types/host-based-routing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:353873910536:certificate/e08cb3bc-a36e-49b0-8b32-5361dd413782
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'    
spec:
  rules:
  - host: nginx.devopstechtrainer.com
    http:    
      paths:
      - path: / # SSL Redirect Setting
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: springboot.devopstechtrainer.com
    http:
      paths:
      - path: / # SSL Redirect Setting
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 8080
